News feed logic and several greek news sources

--- a/bp-activity-news-feed/composer.json
+++ b/bp-activity-news-feed/composer.json
@@ -1,16 +1,14 @@
 {
     "name": "akis/bp-activity-news-feed",
-    "authors": [
-        {
-            "name": "Akis Idrizi",
-            "email": "a.idrizi@gmail.com"
-        }
-    ],
+    "authors": [{
+        "name": "Akis Idrizi",
+        "email": "a.idrizi@gmail.com"
+    }],
     "minimum-stability": "dev",
     "require": {},
     "autoload": {
         "psr-4": {
-            "BP_NewsFeed\\": "BP_NewsFeed/"
+            "inc\\": "BP_NewsFeed/"
         }
     }
 }
